syntax = "proto3";
/* Video Object Detection */
package VOD;

message Detection {
    float left                          = 1;
    float top                           = 2;
    float right                         = 3;
    float bottom                        = 4;
    uint32 id                           = 5;
    uint32 det_class                    = 6;
    uint32 score                        = 7;
    enum DetectionStatus {
        UNTRACKED = 0;
        TRACKED_UNCONFIDENT = 1;
        TRACKED_CONFIDENT = 2;
    }
    DetectionStatus detection_status    = 8;
}

/**
 * Event action used by an event.
 */
enum EventAction {
    EVENT_DELETE                            = 0;
}

/**
 * Event is an object that holds information about an event. The type
 * of event is specified with an action and refers to one object id.
 * A delete event only has one id, so the object_id refers
 * to the object that has been deleted.
 */
message Event {
    EventAction action                      = 1;   /* Event identifier */
    int32 object_id                         = 2;   /* Object id that this event refers to */
}

message Scene {
    uint64 timestamp                        = 1;
    repeated Detection detections           = 2;
    repeated Event events                   = 3;
}

message Calibration {
    float precision                     = 1;
    float recall                        = 2;
    float threshold                     = 3;
}

message ObjectClass {
    uint32 id                           = 1;
    string name                         = 2;
    repeated Calibration calibrations   = 3;
}

message DetectorInformation {
    repeated ObjectClass classes        = 1;
}